- change @Autowired to constructor injection - optimize imports